GNOME Bugzilla – Bug 793737
Per-device idle monitors aren't supported in Wayland
Last modified: 2018-02-27 13:01:31 UTC
.
Created attachment 368806 [details] [review] idle-monitor: Per-device idle monitors aren't supported in Wayland So return an error.
Created attachment 368807 [details] [review] idle-monitor: Remove per-device monitor from tests It's not used anywhere in the stack now that mutter handles hiding the cursor when touchscreens are used, and doesn't work under Wayland.
Created attachment 368809 [details] [review] idle-monitor: Per-device idle monitors aren't supported in Wayland So return an error.
Comment on attachment 368809 [details] [review] idle-monitor: Per-device idle monitors aren't supported in Wayland Since it's not feasible to make the current DBus API work under wayland, it makes sense to error out instead of creating a deaf monitor.
Comment on attachment 368807 [details] [review] idle-monitor: Remove per-device monitor from tests If as per the commit log there's no other users, that's probably a candidate for cleaning up on the mutter side for 3.30 :).
Created attachment 369016 [details] [review] idle-monitor: Per-device idle monitors aren't supported in Wayland So return an error.
Created attachment 369017 [details] [review] idle-monitor: Per-device idle monitors aren't supported in Wayland So return an error.
I added a guard around the gdkwayland include. I also removed the i18n in the last version. It's not going to be used, so no need to bother translators.
Attachment 368807 [details] pushed as 4b94e2c - idle-monitor: Remove per-device monitor from tests Attachment 369017 [details] pushed as d4842ab - idle-monitor: Per-device idle monitors aren't supported in Wayland